--- a/notebooks/01 - FastAI.ipynb
+++ b/notebooks/01 - FastAI.ipynb
@@ -4,20 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'fastai'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-5635efd54484>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mfastai\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvision\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fastai'"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "from fastai.vision.all import *"
+   ]
   },
   {
    "cell_type": "code",
@@ -29,9 +19,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6 - AzureML",
+   "display_name": "Python 3.6 (FastAI)",
    "language": "python",
-   "name": "python3-azureml"
+   "name": "fmnist"
   },
   "language_info": {
    "codemirror_mode": {
@@ -43,7 +33,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
